--- a/package.json
+++ b/package.json
@@ -10,18 +10,45 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "@expo/metro-config": "^0.5.2",
+    "@react-native-community/geolocation": "~3.0.1",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/drawer": "^6.4.3",
+    "@react-navigation/material-top-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/themed": "^4.0.0-rc.5",
+    "bootstrap": "^5.2.0",
+    "expo": "^47.0.10",
+    "expo-crypto": "~12.0.0",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-location": "~15.0.1",
+    "expo-status-bar": "~1.4.2",
+    "firebase": "^9.9.1",
+    "next": "^12.2.5",
+    "react": "18.1.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-geolocation-service": "~5.3.0",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-maps": "1.3.2",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^4.12.4",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "~0.18.7",
+    "react-navigation": "^4.4.4",
+    "styled-components": "^5.3.5",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
